hphp/test/slow/enum_class/enum_class15.php.expectf
Fatal error: Erased generic as HH\Elt enum type in %s/enum_class15.php on line 11
